--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
-        <a href="#">レッスン</a>
-        <a href="#">新規登録</a>
-        <a href="#" class="login">ログイン</a>
+        <a href="#">スタート</a>
+        <a href="#">齋藤飛鳥</a>
+        <a href="#" class="login">かもん</a>
       </div>
     </div>
   </header>
   <div class="top-wrapper">
     <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
+      <h1>のぎおう</h1>
+      <p>大園桃子</p>
       <div class="btn-wrapper">
-        <a href="#" class="btn signup">新規登録はこちら</a>
+        <a href="#" class="btn signup">与田祐希</a>
         <p>or</p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
+        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>西野七瀬で登録</a>
+        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>白石麻衣で登録</a>
       </div>
     </div>
   </div>
